--- a/productapi-week4.html
+++ b/productapi-week4.html
@@ -8,7 +8,6 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
   </head>
 
   <body>
@@ -94,7 +93,7 @@
                   <div class="col-sm-4">
                     <div class="mb-3">
                       <label for="imageUrl" class="form-label">主要圖片</label>
-                      <input v-model="currentProduct.imageUrl" type="text" class="form-control mb-2" placeholder="請輸入圖片連結">
+                      <input v-model="currentProduct.imageUrl" type="text" class="form-control mb-2" placeholder="請輸入圖片連結123">
                       <img class="img-fluid" :src="currentProduct.imageUrl">
                     </div>
                     <h3 class="mb-3">多圖新增</h3>
