--- a/cart-week5.html
+++ b/cart-week5.html
@@ -174,7 +174,7 @@
             </div>
             <div class="text-end">
               <button type="submit" class="btn btn-danger"
-              :disabled="Object.keys(errors).length > 0 || cartData.carts.length==0"
+              :disabled="Object.keys(errors).length > 0 || cartData.carts.length===0"
                       >送出訂單</button>
             </div>
           </v-form>
